--- a/chat_application/index.html
+++ b/chat_application/index.html
@@ -25,6 +25,9 @@ Date         : 25th November, 2016;
     <script src="js/jquery.mousewheel.js"></script>
     <script src="js/jquery.themepunch.revolution.min.js"></script>
     <script src="js/jquery.themepunch.tools.min.js"></script>
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/jquery.2.1.3.jequery.min.js"></script>
+    <script src="js/jquery.1.11.3.jquery-ui.min.js"></script>
     <script src="js/retina.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
@@ -64,7 +67,7 @@ Date         : 25th November, 2016;
         <div class="empty"></div>
         <div class="circle_0f" style="left:20%">      
         </div>
-        <button class="button" style="vertical-align:middle"><span>Remove User </span>
+        <button class="button" style="vertical-align:middle"><span>Remove Friend     </span>
     </div>
 	
 </body>
