--- a/chat_application/index.html
+++ b/chat_application/index.html
@@ -42,7 +42,7 @@ Date         : 25th November, 2016;
         <div class="msg_head">Emmanuel Vitus<div class="close">X</div>              </div>
         <div class="msg_wrapper">
             <div class="msg_body" >
-                <div class="msg_a"> this is from a <!--<div class="time_stamp">3:55am</div>--></div>
+                <div class="msg_a"> ts is from a <!--<div class="time_stamp">3:55am</div>--></div>
                 <div class="msg_b"> the is from b <!--<div class="time_stamp">3:55am</div> --></div>
                 <div class="msg_insert"> </div>
             </div>
